# Vitruvius

./: Cargo.toml  README.md  SYNC_DETAILED_FLOWS.md  SYNC_IMPROVEMENTS.md  WEBSOCKET_SETUP.md
gui/: README.md  gothic.html  index.html  vitruvius_gui.html
src/: 2d.md  app.rs  backend.rs  cli.rs  file_transfer.rs  gui.rs  lib.rs  main.rs  network.rs  network_new.rs  old_main.rs  state.rs  storage.rs  text.txt  watcher.rs  ws.rs
src/gui/: http.rs  mod.rs  types.rs  ws.rs
src/network/: behaviour.rs  messages.rs  mod.rs  session.rs  setup.rs
src/storage/: chunk.rs  metadata.rs  mod.rs  operations.rs  transfer.rs
src/sync/: handler.rs  mod.rs  state.rs
test/: wallpaper_shifter.sh
