[package]
name = "vitruvius"
version = "0.1.0"
edition = "2021"

[dependencies]
# libp2p for P2P networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "mdns", "gossipsub", "tokio","macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
