[package]
name = "Vitruv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "mdns", "yamux", "tokio", "macros", "request-response", "cbor"] }
blake3 = "1.5"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dialoguer = "0.12.0"
rayon = "1.8"
tokio-tungstenite = "0.21"
serde_json = "1.0"
axum = "0.7"
futures-util = "0.3"
