[package]
name = "Vitruv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1.35",  features = ["full"] }
tokio-tungstenite = { version = "0.21" }
futures-util      = "0.3"
libp2p            = { version = "0.53", features = ["tcp", "noise", "mdns", "yamux", "tokio", "macros", "request-response", "cbor"] }
blake3            = "1.5"
serde             = { version = "1.0",  features = ["derive"] }
serde_json        = "1.0"
anyhow            = "1.0"
thiserror         = "1.0"
tracing           = "0.1"
tracing-subscriber = "0.3"
notify = { version = "6", features = ["macos_fsevent"] }
